@@ -16,7 +16,7 @@
 
 		void	setAutoCommit(bool ac);
 
-		bool		initCursors(uint16_t count);
+		bool			initCursors(uint16_t count);
 		sqlrservercursor	*newCursor(uint16_t id);
 
 		void	incrementConnectionCount();
